--- a/Classifier_Training.ipynb
+++ b/Classifier_Training.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Preliminaries ##\n",
     "\n",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +40,10 @@
      "text": [
       "\u001b[1mAllHits/AbsoluteCharge\u001b[0m\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 411064 entries, 0 to 411063\n",
+      "Int64Index: 500 entries, 0 to 499\n",
       "Columns: 407 entries, pixel_78 to pixel_148\n",
       "dtypes: float64(405), int32(1), int64(1)\n",
-      "memory usage: 1.2 GB\n",
+      "memory usage: 1.6 MB\n",
       "None\n"
      ]
     }
@@ -71,7 +63,7 @@
     "\n",
     "# Import data\n",
     "df = pd.read_hdf(\"/uscms_data/d3/bbonham/TrackerProject/Output_of_Postprocess/\"+datafilename, \n",
-    "                 key=\"df\", mode='r', start=0, stop=None)\n",
+    "                 key=\"df\", mode='r', start=0, stop=500)\n",
     "\n",
     "# Print dataframe info\n",
     "print '\\033[1m' + datafilename[:-16] + '\\033[0m' # name printed in bold\n",
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,20 +120,20 @@
     "epochs_number = 100 \n",
     "\n",
     "# Stop training early to prevent overtraining\n",
-    "early_stopping = EarlyStopping(monitor='val_loss', patience=10) "
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Data Shape:  (500, 407)\n",
-      "Train Data Shape:  (500, 407)\n"
+      "Test Data Shape:  (250, 407)\n",
+      "Train Data Shape:  (250, 407)\n"
      ]
     }
    ],
@@ -162,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -171,45 +163,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 450 samples, validate on 50 samples\n",
+      "Train on 225 samples, validate on 25 samples\n",
       "Epoch 1/100\n",
-      "450/450 [==============================] - 2s 4ms/step - loss: 0.3334 - acc: 0.9489 - val_loss: 0.2153 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 1s 5ms/step - loss: 0.3869 - acc: 0.8133 - val_loss: 0.3960 - val_acc: 0.9600\n",
       "Epoch 2/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.1863 - acc: 0.9778 - val_loss: 0.1010 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.2143 - acc: 0.9556 - val_loss: 0.2819 - val_acc: 0.9600\n",
       "Epoch 3/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.1184 - acc: 0.9778 - val_loss: 0.0864 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.2627 - acc: 0.9556 - val_loss: 0.2273 - val_acc: 0.9600\n",
       "Epoch 4/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0833 - acc: 0.9778 - val_loss: 0.0782 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1630 - acc: 0.9556 - val_loss: 0.3401 - val_acc: 0.9600\n",
       "Epoch 5/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.1184 - acc: 0.9800 - val_loss: 0.0857 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1401 - acc: 0.9556 - val_loss: 0.2157 - val_acc: 0.9600\n",
       "Epoch 6/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0682 - acc: 0.9844 - val_loss: 0.0748 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1304 - acc: 0.9556 - val_loss: 0.1828 - val_acc: 0.9600\n",
       "Epoch 7/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0520 - acc: 0.9911 - val_loss: 0.0702 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.2177 - acc: 0.9556 - val_loss: 0.2803 - val_acc: 0.9600\n",
       "Epoch 8/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0433 - acc: 0.9911 - val_loss: 0.0675 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.2349 - acc: 0.9556 - val_loss: 0.1848 - val_acc: 0.9600\n",
       "Epoch 9/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0393 - acc: 0.9911 - val_loss: 0.0671 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1292 - acc: 0.9556 - val_loss: 0.2134 - val_acc: 0.9600\n",
       "Epoch 10/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0344 - acc: 0.9933 - val_loss: 0.0730 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1350 - acc: 0.9556 - val_loss: 0.2284 - val_acc: 0.9600\n",
       "Epoch 11/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0320 - acc: 0.9933 - val_loss: 0.0745 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1280 - acc: 0.9556 - val_loss: 0.1926 - val_acc: 0.9600\n",
       "Epoch 12/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0233 - acc: 0.9933 - val_loss: 0.0681 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.1071 - acc: 0.9556 - val_loss: 0.1675 - val_acc: 0.9600\n",
       "Epoch 13/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0203 - acc: 0.9933 - val_loss: 0.0726 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0972 - acc: 0.9556 - val_loss: 0.1614 - val_acc: 0.9600\n",
       "Epoch 14/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0179 - acc: 0.9933 - val_loss: 0.1092 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0936 - acc: 0.9556 - val_loss: 0.1632 - val_acc: 0.9600\n",
       "Epoch 15/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0184 - acc: 0.9933 - val_loss: 0.0957 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0915 - acc: 0.9556 - val_loss: 0.1385 - val_acc: 0.9600\n",
       "Epoch 16/100\n",
-      "450/450 [==============================] - 1s 3ms/step - loss: 0.0130 - acc: 0.9911 - val_loss: 0.1113 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0854 - acc: 0.9556 - val_loss: 0.1068 - val_acc: 0.9600\n",
       "Epoch 17/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0143 - acc: 0.9911 - val_loss: 0.1139 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0824 - acc: 0.9556 - val_loss: 0.1101 - val_acc: 0.9600\n",
       "Epoch 18/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0117 - acc: 0.9911 - val_loss: 0.1006 - val_acc: 0.9600\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0797 - acc: 0.9556 - val_loss: 0.1266 - val_acc: 0.9600\n",
       "Epoch 19/100\n",
-      "450/450 [==============================] - 1s 2ms/step - loss: 0.0107 - acc: 0.9956 - val_loss: 0.1424 - val_acc: 0.9800\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0760 - acc: 0.9556 - val_loss: 0.1066 - val_acc: 0.9600\n",
+      "Epoch 20/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0730 - acc: 0.9556 - val_loss: 0.1047 - val_acc: 0.9600\n",
+      "Epoch 21/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0702 - acc: 0.9556 - val_loss: 0.1160 - val_acc: 0.9600\n",
+      "Epoch 22/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0695 - acc: 0.9556 - val_loss: 0.0977 - val_acc: 0.9600\n",
+      "Epoch 23/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0655 - acc: 0.9556 - val_loss: 0.1063 - val_acc: 0.9600\n",
+      "Epoch 24/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0630 - acc: 0.9556 - val_loss: 0.0982 - val_acc: 0.9600\n",
+      "Epoch 25/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0591 - acc: 0.9556 - val_loss: 0.0802 - val_acc: 0.9600\n",
+      "Epoch 26/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0582 - acc: 0.9556 - val_loss: 0.0964 - val_acc: 0.9600\n",
+      "Epoch 27/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0562 - acc: 0.9556 - val_loss: 0.0953 - val_acc: 0.9600\n",
+      "Epoch 28/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0520 - acc: 0.9556 - val_loss: 0.0909 - val_acc: 0.9600\n",
+      "Epoch 29/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0491 - acc: 0.9556 - val_loss: 0.0945 - val_acc: 0.9600\n",
+      "Epoch 30/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0467 - acc: 0.9556 - val_loss: 0.0947 - val_acc: 0.9600\n",
+      "Epoch 31/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0475 - acc: 0.9556 - val_loss: 0.0790 - val_acc: 0.9600\n",
+      "Epoch 32/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0457 - acc: 0.9556 - val_loss: 0.0791 - val_acc: 0.9600\n",
+      "Epoch 33/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0443 - acc: 0.9556 - val_loss: 0.0854 - val_acc: 0.9600\n",
+      "Epoch 34/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0421 - acc: 0.9822 - val_loss: 0.0867 - val_acc: 0.9600\n",
+      "Epoch 35/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0409 - acc: 0.9689 - val_loss: 0.0872 - val_acc: 0.9600\n",
+      "Epoch 36/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0379 - acc: 0.9911 - val_loss: 0.0976 - val_acc: 0.9600\n",
+      "Epoch 37/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0368 - acc: 0.9644 - val_loss: 0.0838 - val_acc: 0.9600\n",
+      "Epoch 38/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0357 - acc: 0.9956 - val_loss: 0.0935 - val_acc: 0.9600\n",
+      "Epoch 39/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0356 - acc: 0.9911 - val_loss: 0.1017 - val_acc: 0.9600\n",
+      "Epoch 40/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0356 - acc: 0.9778 - val_loss: 0.0643 - val_acc: 0.9600\n",
+      "Epoch 41/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0382 - acc: 1.0000 - val_loss: 0.0749 - val_acc: 0.9600\n",
+      "Epoch 42/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0353 - acc: 0.9822 - val_loss: 0.1088 - val_acc: 0.9600\n",
+      "Epoch 43/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0331 - acc: 0.9867 - val_loss: 0.0910 - val_acc: 0.9600\n",
+      "Epoch 44/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0327 - acc: 1.0000 - val_loss: 0.1109 - val_acc: 0.9600\n",
+      "Epoch 45/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0329 - acc: 0.9867 - val_loss: 0.1004 - val_acc: 0.9600\n",
+      "Epoch 46/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0333 - acc: 1.0000 - val_loss: 0.0989 - val_acc: 0.9600\n",
+      "Epoch 47/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0324 - acc: 0.9956 - val_loss: 0.1264 - val_acc: 0.9600\n",
+      "Epoch 48/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0320 - acc: 0.9956 - val_loss: 0.1162 - val_acc: 0.9600\n",
+      "Epoch 49/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0317 - acc: 0.9956 - val_loss: 0.1146 - val_acc: 0.9600\n",
+      "Epoch 50/100\n",
+      "225/225 [==============================] - 0s 1ms/step - loss: 0.0316 - acc: 1.0000 - val_loss: 0.1286 - val_acc: 0.9600\n",
       "\n",
       "Saved: TrainedModel_AllHits_AbsoluteCharge.h5\n"
      ]
@@ -226,7 +280,7 @@
     "history = model.fit(images_train,\n",
     "                    keras.utils.to_categorical( eval(\"df_train\"+signalstring) ), \n",
     "                    epochs = epochs_number, \n",
-    "                    callbacks = [early_stopping, model_checkpoint], \n",
+    "                    callbacks = [early_stopping], \n",
     "                    validation_split = 0.1) # fraction of training sample used for testing (here 10%)\n",
     "# Save model (again)\n",
     "model.save(model_checkpoint_name)\n",
