Intermediate update...Not ready for use.

--- a/ROC_Curves/ROC_Curves.ipynb
+++ b/ROC_Curves/ROC_Curves.ipynb
@@ -61,6 +61,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC Curve (Area = 0.953)\n",
+      "NN Script\n",
+      "AllHits/AbsoluteCharge\n",
+      "['trackPt', 'trackEta', 'totalADCcount']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# File paths\n",
+    "datafilenames = [\"SharedHits/NormalizedCharge/output_final.h5\",\"SharedHits/AbsoluteCharge/output_final.h5\",\n",
+    "                \"Shared100NonShared/NormalizedCharge/output_final.h5\",\"Shared100NonShared/AbsoluteCharge/output_final.h5\",\n",
+    "                \"AllHits/NormalizedCharge/output_final.h5\",\"AllHits/AbsoluteCharge/output_final.h5\"]\n",
+    "\n",
+    "filenumber = 5\n",
+    "filename = \"/uscms_data/d3/bbonham/TrackerProject/Output_of_Postprocess/AllHits/AbsoluteCharge/output_final.h5\"\n",
+    "signalstring = \"['isSharedHit']==1\"\n",
+    "auc=.953\n",
+    "otherVariables = [\"trackPt\",\"trackEta\",\"totalADCcount\"]\n",
+    "\n",
+    "#print \"ROC Curve\"+\"\\n\"+datafilename[:-16]+\"\\n\"+\"Signal: \"+signalstring+\"\\n\"+\"Area = {:.3f}\".format(.95)\n",
+    "print \"ROC Curve (Area = {:.3f})\".format(auc)+\"\\nNN Script\\n\"+filename[60:-16]+\"\\n\"+str(otherVariables)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "scrolled": false
